<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="resultHead">Hasil Klasifikasi:</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="result_contentDescription">Content Description to be replaced programmatically</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="no_history_available">No History Available</string>
    <string name="can_not_retrieve_data">Can not retrieve data</string>
    <string name="article_judul">Judul</string>
    <string name="article_desc">Description</string>
    <string name="article_image">Article Image</string>
</resources>